--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,25 @@
 addict==2.4.0
-datasets==2.16.1
+einops==0.7.0
+imageio==2.31.4
 matplotlib==3.8.2
+MinkowskiEngine==0.5.4
 mmcv==2.1.0
 numpy==1.26.3
 open3d==0.18.0
 opencv_python==4.9.0.80
+pandas==2.1.4
 pyrealsense2==2.54.2.5684
 regex==2023.12.25
 scipy==1.11.4
 SharedArray==3.2.3
+spconv==2.3.6
 tensorboardX==2.6.2.2
 termcolor==2.4.0
+timm==0.9.12
 torch==2.1.2
-trimesh==4.0.8
+torch_geometric==2.4.0
+torch_points3d==1.3.0
+torch_points_kernels==0.7.0
+torch_scatter==2.1.2
+trimesh==4.0.9
 yapf==0.40.2
